# VecEdit-jobs

./: README.md  VecEdit-jobs.cabal
src/VecEdit/: GHCI.hs  Jobs.hs
test/: Main.hs
tests/: JobsTest.hs
