cabal-version: 1.12

name:               VecEdit-jobs
version:            0.1.0.0
synopsis:           A jobs/process manager built on top of VecEdit
category:           Shell
author:             Ramin Honary
maintainer:         ramin.honary@gmail.com
copyright:          2021 Ramin Honary, all rights reserved
license:            AGPL
build-type:         Simple
extra-source-files: README.md

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    VecEdit.Jobs

  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    OverloadedLabels
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , lens
    , mtl
    , process
    , semigroups
    , text
    , time
    , transformers
    , unix
    , utf8-string
    , vector
    , VecEdit
    , VecEdit-text
