cabal-version: 2.2

name:               VecEdit-jobs
version:            0.1.0.0
synopsis:           A jobs/process manager built on top of VecEdit
category:           Shell
author:             Ramin Honary
maintainer:         ramin.honary@gmail.com
copyright:          2022 Ramin Honary, all rights reserved
license:            AGPL-3.0-or-later
build-type:         Simple

extra-source-files:
  README.md
  .ghci

common config-VecEdit
  default-language: Haskell2010
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    OverloadedLabels
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

common depends-VecEdit  
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , lens
    , mtl
    , process
    , semigroups
    , text
    , time
    , transformers
    , unix
    , utf8-string
    , vector
    , VecEdit
    , VecEdit-text

library
  import: config-VecEdit, depends-VecEdit
  hs-source-dirs: src
  exposed-modules:
    VecEdit.Jobs

test-suite VecEdit-jobs-tests
  import: config-VecEdit, depends-VecEdit
  type: exitcode-stdio-1.0
  hs-source-dirs: src, tests
  main-is: JobsTest.hs
  build-depends:
      VecEdit
    , VecEdit-text
    , containers
    , parsers
